--- a/train_model/text2sql.ipynb
+++ b/train_model/text2sql.ipynb
@@ -819,7 +819,7 @@
         "import sqlite3\n",
         "\n",
         "def execute_query(query, db_name):\n",
-        "    conn = sqlite3.connect(f'database/{db_name}/{db_name}.sqlite')\n",
+        "    conn = sqlite3.connect(f'../database/{db_name}/{db_name}.sqlite')\n",
         "    cursor = conn.cursor()\n",
         "    \n",
         "    try:\n",
